testsuite/tests/indexed-types/should_fail/T14887.stderr

T14887.hs:13:1: error:
    • The kind of ‘Foo2’ is ill-scoped
        Inferred kind: Foo2 :: forall (a :: k). forall k -> (a :~: a) -> *
      NB: Specified variables (namely: (a :: k)) always come first
      Perhaps try this order instead: k (a :: k) (e :: a :~: a)
    • In the type family declaration for ‘Foo2’

T14887.hs:14:11: error:
    • Couldn't match kind ‘k2’ with ‘k3’
      When matching kinds
        a0 :: k1
        a1 :: k2
      Expected kind ‘a0 :~: a0’, but ‘e :: a :~: a’ has kind ‘a1 :~: a1’
      ‘k2’ is a rigid type variable bound by
        a family instance declaration
        at T14887.hs:14:8-23
      ‘k3’ is a rigid type variable bound by
        a family instance declaration
        at T14887.hs:13:19
    • In the second argument of ‘Foo2’, namely ‘(e :: a :~: a)’
      In the type family declaration for ‘Foo2’
